--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,5 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json,yaml,yml}]
+[*.{json,yaml,yml,md}]
 indent_size = 2
